--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,4 +1,3 @@
-
 name: Firebase Deploy
 
 on:
@@ -13,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -24,11 +23,24 @@ jobs:
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
 
-      - name: Firebase Auth
-        run: |
-          echo "$FIREBASE_SERVICE_ACCOUNT" > serviceAccount.json
-          firebase experiments:enable webframeworks
-          firebase deploy --only firestore,functions --project=$FIREBASE_PROJECT_ID
+      - name: Authenticate Firebase
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        run: |
+          echo "$FIREBASE_SERVICE_ACCOUNT" > serviceAccount.json
+          firebase auth:login:ci || true
+
+      - name: Deploy Firestore Rules
+        env:
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        run: |
+          firebase deploy --only firestore:rules --project=$FIREBASE_PROJECT_ID
+
+      - name: Deploy Cloud Functions
+        env:
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        run: |
+          cd functions
+          npm install
+          cd ..
+          firebase deploy --only functions --project=$FIREBASE_PROJECT_ID
