--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -58,7 +58,8 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-            name: ethioshop-builds
-            path: |
-              flutter_app/build/app/outputs/flutter-apk/app-release.apk
-              flutter_app/build/app/outputs/bundle/release/app-release.aab
+        
+      - name: ethioshop-builds
+         path: |
+           flutter_app/build/app/outputs/flutter-apk/app-release.apk
+           flutter_app/build/app/outputs/bundle/release/app-release.aab
