--- a/flutter_app/android/app/build.gradle
+++ b/flutter_app/android/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    id "dev.flutter.flutter-gradle-plugin"
+    id "dev.flutter.flutter-plugin-loader"
 }
 
 android {
@@ -19,7 +19,6 @@ android {
 
     signingConfigs {
         release {
-            // CI will place keystore.jks at app/ during build
             storeFile file("keystore.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD")
             keyPassword System.getenv("KEY_PASSWORD")
