--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ethioshoper
-description: ETHIOSHOPER marketplace app
+description: ETHIOSHOPER full marketplace
 publish_to: none
 version: 1.0.0+1
 
@@ -9,19 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
-  provider: ^6.0.5
   lottie: ^3.0.0
-  cached_network_image: ^3.3.1
+  connectivity_plus: ^4.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
