--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    // <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />//
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
 
@@ -33,10 +33,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="9b006dfc-f790-4ec9-9029-53a184a59924"/>
             
     </application>
     </manifest>
