--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="9b006dfc-f790-4ec9-9029-53a184a59924"/>
             
     </application>
     </manifest>
