--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,13 +19,15 @@ pluginManagement {
 }
 
 // Define plugins that are used in the project (like Android application, Kotlin, etc.)
-plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.0" apply false // Use your AGP version
-    id "org.jetbrains.kotlin.android" version "2.2.21" apply false // Use your Kotlin version
+plugins { 
+// Upgraded for Android 16KB pages + latest SDKs // AGP 8.12.0, Kotlin 2.1.0 (ensure Flutter Gradle plugin supports these) id "dev.flutter.flutter-plugin-loader" version "1.0.0" id "com.android.application" version "8.12.0" apply false id "org.jetbrains.kotlin.android" version "2.1.0" apply false}
+// AGP 8.12.0, Kotlin 2.1.0 (ensure Flutter Gradle plugin supports these) id "dev.flutter.flutter-plugin-loader" version "1.0.0" id "com.android.application" version "8.12.0" apply false id "org.jetbrains.kotlin.android" version "2.1.0" apply false// 🔑 THE CRITICAL LINE THAT FIXES YOUR ERROR:
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0" 
+    id "com.android.application" version "8.12.0" apply false 
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
+
 }
 
-// 🔑 THE CRITICAL LINE THAT FIXES YOUR ERROR:
 include ':app'
 
 // This section is for plugins used by the Flutter app itself
