--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,8 +41,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_2_1 
-        targetCompatibility JavaVersion.VERSION_2_1
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
     kotlinOptions {
