--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,7 +16,7 @@ android {
         applicationId "com.ethio.shop"
         
         // Minimum SDK version set to 21 for modern Flutter/Firebase/Google Maps support
-        minSdkVersion 36
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutter.versionCode.toInteger()
         versionName flutter.versionName
@@ -56,7 +56,7 @@ flutter {
 
 dependencies {
     // MultiDex support
-    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.material:material:1.11.0'
     
     // Kotlin standard library dependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
