--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     
     // Kotlin standard library dependency
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.2.21"
     
     // Dependencies are automatically injected by Flutter
 }
