--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,12 +29,13 @@ jobs:
         run: |
           echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 -d > android/app/google-services.json
           
-      - name: ☕ Set up JDK 21 (Required for Android Build)
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
         with:
-          distribution: 'zulu'
           java-version: '21'
-          
+          distribution: 'temurin' # Eclipse Temurin is the recommended distribution
+          cache: 'gradle'        # Enable Gradle dependency caching
+                
       # --- END FIREBASE DEPLOYMENT SETUP ---
 
       - name: 🔎 Analyze & Test
