--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -37,7 +37,12 @@ jobs:
           cache: 'gradle'        # Enable Gradle dependency caching
                 
       # --- END FIREBASE DEPLOYMENT SETUP ---
-
+      - name: Generate Dummy Debug Keystore
+        run: | 
+         mkdir -p android/app
+          keytool -genkey -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+        shell: bash
+        
       - name: 🔎 Analyze & Test
         run: |
           flutter analyze
