--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,16 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   # 🔑 Firebase Packages (Updated to latest stable versions)
-  firebase_core: ^4.2.1         # New: ^2.24.2 -> ^4.2.1
-  firebase_auth: ^6.1.2         # New: ^4.15.2 -> ^6.1.2
-  cloud_firestore: ^5.2.1       # New: ^4.13.5 -> ^5.2.1
-  firebase_storage: ^12.1.0     # New: ^11.5.6 -> ^12.1.0
+
+  # ... other packages
+
+  # 🔑 Firebase Packages (SYNCHRONIZED AND UPDATED)
+  firebase_core: ^6.1.1       # Updated to ^6.1.1 to resolve conflict
+  firebase_auth: ^6.1.2       
+  cloud_firestore: ^5.6.14    # Updated significantly to match the new core version
+  firebase_storage: ^12.1.0   
+
+  # ... rest of your dependencies     # New: ^11.5.6 -> ^12.1.0
 
   # 🗺 Maps & Location (Updated to latest stable versions)
   google_maps_flutter: ^2.14.0  # New: ^2.5.0 -> ^2.14.0
