--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,18 @@ dependencies:
   # ... other packages
   # 🔑 Firebase Packages (SYNCHRONIZED TO THE LATEST STABLE SET)
   # cloud_firestore: 6.1.0 is compatible with firebase_core and dart >=3.2.0
-  firebase_core: ^4.2.1       # Keeping it within the latest compatible 4.x range
-  firebase_auth: ^6.1.2       # Latest stable
-  cloud_firestore: ^6.1.0     # Corrected version to the latest stable release
-  firebase_storage: ^12.1.0   # Latest stable
   
+# 🔑 Firebase Packages
+
+  firebase_core: ^2.24.2
+
+  firebase_auth: ^4.15.2
+
+  cloud_firestore: ^4.13.5
+
+  firebase_storage: ^11.5.6
+
+
   # ... rest of your dependencies  # ... rest of your dependencies     # New: ^11.5.6 -> ^12.1.0
 
   # 🗺 Maps & Location (Updated to latest stable versions)
