--- a/.github/workflows/Apk.yml
+++ b/.github/workflows/Apk.yml
@@ -1,123 +1,63 @@
-name: (APK)
+name: Flutter Android Release (APK)
 
+# 1. TRIGER: Run the workflow when code is pushed to the main/master branch.
 on:
   push:
     branches:
-      - main # Trigger on pushes to the main branch
+      - main
+      - master
   workflow_dispatch: # Allows manual trigger from the GitHub Actions tab
 
+# Use a single job for simplicity and artifact sharing
 jobs:
   build_android:
+    # Use the fastest available Linux runner
     runs-on: ubuntu-latest
     
-    # Define environment variables for the build process
-    env:
-      FLUTTER_VERSION: '3.22.x' # Use the version required by your project
-      JAVA_VERSION: '21.0.x'    # Matches the JVM target 21 you configured
-
     steps:
-      - name: 1. ⬇️ Checkout Repository
+      # 2. CHECKOUT: Checks out the code repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # --- SETUP ---
-
-      - name: 2. ☕ Set up JDK 21
-        uses: actions/setup-java@v4
+      # 3. SETUP JAVA 21: Required for building with AGP 8.x and Gradle 8.x
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
         with:
+          java-version: '21'
           distribution: 'temurin'
-          java-version: ${{ env.JAVA_VERSION }}
+          # Caches Gradle dependencies for speed
+          cache: 'gradle'
 
-      - name: 3. 💙 Set up Flutter SDK
+      # 4. SETUP FLUTTER: Sets up the Flutter SDK
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
+          channel: 'stable' # Use stable channel
+          # flutter-version: '3.22.x' # Optionally lock a specific version
+          cache: true # Cache Flutter SDK
 
-      - name: 4. 📦 Get Flutter Dependencies
+      # 5. DEPENDENCIES: Get all Flutter packages
+      - name: Get Dependencies
         run: flutter pub get
 
-      # --- SIGNING FIXES ---
-      
-      # 5. GENERATE DEBUG KEY: Fixes the 'debug.keystore not found' validation error.
-      # This creates the dummy debug key in the expected location.
-      - name: 5. Generate Dummy Debug Keystore
-        run: |
-          mkdir -p android/app
-          keytool -genkey -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
-        shell: bash
+      # 6. (Optional) RUN TESTS: Ensure code quality before building
+      - name: Run Tests
+        run: flutter test
 
-      # 6. INJECT RELEASE KEY: Decodes the Base64 secret and places the JKS file.
-      # This is ESSENTIAL for the release build.
-      - name: 6. Inject Release Keystore from Secrets
-        # Check if the secret exists before trying to decode
-        if: ${{ secrets.KEY_STORE_FILE_BASE64 != '' }}
-        run: |
-          # Decode the Base64 string and save it as release-key.jks
-          echo "${{ secrets.KEY_STORE_FILE_BASE64 }}" | base64 --decode > android/app/release-key.jks
-          
-          # Export path and alias as environment variables for build.gradle
-          echo "KEY_STORE_PATH=android/app/release-key.jks" >> $GITHUB_ENV
-          echo "KEY_ALIAS=upload" >> $GITHUB_ENV # Ensure 'upload' matches your key alias
-        shell: bash
-
-      # --- BUILD ---
-
-      - name: 7. 🧹 Clean Build Environment
+      # 7. CLEAN: Clean up any prior build artifacts
+      - name: Clean Project
         run: flutter clean
 
-      - name: 8. 🏗️ Build Android Release APK
-        # Pass passwords from GitHub Secrets as environment variables
-        env:
-          KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-          KEY_ALIAS_PASSWORD: ${{ secrets.KEY_ALIAS_PASSWORD }}
+      # 8. BUILD: Compile the optimized release APK
+      # Includes the --no-tree-shake-icons flag as requested
+      - name: Build Android Release APK
         run: flutter build apk --release --no-tree-shake-icons
 
-      # --- UPLOAD ---
-
-      - name: 9. 💾 Upload Release APK Artifact
+      # 9. ARTIFACTS: Upload the generated APK to the workflow artifacts
+      # The resulting file is at build/app/outputs/flutter-apk/app-release.apk
+      - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: ethio_shop-release-apk
+          name: ethio-shop-release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
-          retention-days: 7 # Store the artifact for 7 days          cache: 'gradle'        # Enable Gradle dependency caching
-                
-      # --- END FIREBASE DEPLOYMENT SETUP ---
-      - name: Generate Dummy Debug Keystore
-        run: | 
-         mkdir -p android/app
-          keytool -genkey -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
-        shell: bash
-        
-      - name: 🔎 Analyze & Test
-        run: |
-          flutter analyze
-          flutter test
-        
-      - name: 🏗️ Build Android App Bundle (AAB)
-        # The build process now uses the decoded google-services.json
-        run: flutter build appbundle --release
-        
-      # --- START DEPLOYMENT TO FIREBASE APP DISTRIBUTION ---
-
-      - name: ⚙️ Install Firebase CLI
-        run: npm install -g firebase-tools
-        
-      - name: ⬆️ Deploy to Firebase App Distribution
-        run: |
-          # Finds the generated AAB file path
-          AAB_FILE=$(find build/app/outputs/bundle/release/ -name "*.aab" | head -n 1)
-          
-          # Distribute the file
-          firebase appdistribution:distribute "$AAB_FILE" \
-            --app 1:672418288153:android:f6f631486c9748a883d088 \
-            --release-notes "CI Build ${{ github.sha }}" \
-            --groups "testers" \
-            --token ${{ secrets.FIREBASE_TOKEN }}
-        env:
-          # Sets environment variable for Firebase CLI
-          FIREBASE_CLI_EXPERIMENTAL: true
-          
-      # --- END DEPLOYMENT TO FIREBASE APP DISTRIBUTION ---
-      
-      - name: ✅ Final Status
-        run: echo "Build, Test, and Deployment to Firebase completed successfully."
+          retention-days: 5 # Keep artifact for 5 days
