--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
+      - uses: actions/checkout@v5
+      
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
-          distribution: 'zulu'
           java-version: '21'
-          cache: 'gradle' # Automatically caches gradle dependencies
+          distribution: 'temurin'
+          # Caches Gradle dependencies for speed
+          cache: 'gradle'
+          # ... (After Set up JDK 21 step)
+
+      # 4. CREATE DEBUG KEY: Manually generate the debug.keystore to satisfy Gradle's validation
+      - name: Generate Dummy Debug Keystore
+        run: |
+          mkdir -p android/app
+          keytool -genkey -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+        shell: bash
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
