--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ethio_shop
-description: The ETHIO Adaptive Marketplace application.
+description: The ETHIO🛍 Adaptive Marketplace application.
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.1.0+2
 
 environment:
   # Ensure the SDK supports Dart's latest features and null safety
@@ -11,45 +11,34 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # 🎨 Icons
-  cupertino_icons: ^1.0.6
-
-  # 🔑 Firebase Packages (Updated to latest stable versions)
-  # ... other packages
-  # 🔑 Firebase Packages (SYNCHRONIZED TO THE LATEST STABLE SET)
-  # cloud_firestore: 6.1.0 is compatible with firebase_core and dart >=3.2.0
-  
-# 🔑 Firebase Packages
-
-  firebase_core: ^3.1.1
-
-  firebase_auth: ^5.1.1
-
-  cloud_firestore: ^5.0.2
-
-  firebase_storage: ^12.1.1
-
-
-  # ... rest of your dependencies  # ... rest of your dependencies     # New: ^11.5.6 -> ^12.1.0
-
-  # 🗺 Maps & Location (Updated to latest stable versions)
-  google_maps_flutter: ^2.7.0
-  geolocator: ^10.1.0           # Current version is fine
-
-  # 🛠 Utilities (Updated lottie and connectivity_plus)
-  connectivity_plus: ^6.0.3
+  # UI & UX
+  cupertino_icons: ^1.0.8
   lottie: ^3.1.2
-  
-  # 🖼 Media
-  image_picker: ^1.0.4
-  cached_network_image: ^3.3.0
-  intl: ^0.18.1
-  url_launcher: ^6.2.2
+  cached_network_image: ^3.4.1
+
+  # Firebase
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.5.0
+  cloud_firestore: ^5.4.0
+  firebase_storage: ^12.4.0
+  google_sign_in: ^6.2.1
+
+  # Maps & Location
+  google_maps_flutter: ^2.7.0
+  geolocator: ^12.0.0
+
+  # Utilities
+  connectivity_plus: ^7.0.0
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  url_launcher: ^6.3.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
