--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ethio_shop
-description: The ETHIO🛍 Adaptive Marketplace application.
+description: The ETHIO Adaptive Marketplace application.
 publish_to: 'none'
 version: 1.1.0+2
 
