--- a/.github/workflows/debug-apk-release.yml
+++ b/.github/workflows/debug-apk-release.yml
@@ -1,5 +1,9 @@
 name: 🛠️ Build Flutter Debug APK
 
+# Global Environment Variables from your main workflow
+-on: |
+workflow_dispatch
+
     steps:
       # --- SETUP ---
 
