--- a/.github/workflows/debug-apk-release.yml
+++ b/.github/workflows/debug-apk-release.yml
@@ -33,6 +33,7 @@ jobs:
           cache: false
 
       # --- DEPENDENCIES ---
+      
 
       - name: 4. Get Flutter Dependencies
         run: flutter pub get
@@ -43,3 +44,7 @@ jobs:
         run: |
           keytool -genkey -v -keystore android/app/debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
         
+
+# --- BUILD --- 
+      - name: 6. 🏗️ Build 
+        run: flutter build apk --debug
