--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
 
+    - name: Install dependencies
+      run: flutter --disable-analytics
+      
     - name: Verify Flutter installation
       run: flutter doctor -v
 
